VLC fails to output sound after a USB audio device has been unplugged and replugged in Mac OS X
Should a USB sound device accidently come unplugged VLC fails to start the sound again when the device is plugged back in. I have tested it in all 3 major platforms and it only seems to occur in Mac OS X and only on USB devices. Switching audio output devices doesn't seem to work, the only way to solve the issue is a full restart of VLC itself.
Edited by Exlixe