auhal: fixed audio device configuration callback and added an additional callback to watch the used device's health (close #4834)